apps/base/examiner/k8s-network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
spec:
  policyTypes:
    - Ingress
  ingress:
    - {}
